--- a/www/de/index.html
+++ b/www/de/index.html
@@ -30,7 +30,8 @@
 
 
 		<div class="content">
-			<h1>Anleitung zum Gutscheintausch</h1>
+			<h1>Gutschein gegen Bargeld tauschen</h1>
+
 			<p>Du bekommst die Bezahlkarte und nur 50€ Bargeld im Monat? Wenn du mehr Bargeld brauchst, dann lass uns tauschen!</p>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
@@ -46,6 +47,19 @@
 			<p>Mit öffentlichen Verkehrsmitteln am besten zu erreichen von den Haltestellen <span translate="no">Betriebshof</span> und <span translate="no">Hauptbahnhof</span></p>
 			<h2>Wann?</h2>
 			<p>Jeden 2. Dienstag und jeden 3. Freitag im Monat von 17:00 Uhr bis 19:00 Uhr.</p>
+		</div>
+
+
+		<div class="content">
+			<h1>Gutscheinausgaben</h1>
+
+			<p>Du bist solidarisch mit Menschen mit Bezahlkarte und magst bei unseren Aktionen mitmachen? Hol dir deinen Einkaufsgutschein bei einer unserer Ausgabestellen.</p>
+
+			<p translate="no"><strong>Bürgerbüro Die Linke</strong><br>Theodor-Körner-Str. 7<br>69115 Heidelberg<br><br>Montag 09:00 - 13:00 Uhr<br>Dienstag 10:00 - 14:00 Uhr<br>Mittwoch 13:00 - 18:00 Uhr</p>
+			<p translate="no"><strong>Café Gegendruck</strong><br>Fischergasse 2<br>69117 Heidelberg<br><br>Sonntag 20:00 Uhr bei der KüFa (veganes Esen auf Spendenbasis)</p>
+			<p translate="no"><strong>Basement Bikes</strong><br>Werftstraße 29<br>68159 Mannheim<br><br>Zu den regulären Öffnungszeiten</p>
+
+			<p>Je nach Verfügbarkeit gibt es meist Guscheine von <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> oder <span translate="no">DM</span> für <strong>50€</strong>
 		</div>
 
 		<div class="content">
