--- a/www/de/index.html
+++ b/www/de/index.html
@@ -55,9 +55,9 @@
 
 			<p>Du bist solidarisch mit Menschen mit Bezahlkarte und magst bei unseren Aktionen mitmachen? Hol dir deinen Einkaufsgutschein bei einer unserer Ausgabestellen.</p>
 
-			<p translate="no"><strong>Bürgerbüro Die Linke</strong><br>Theodor-Körner-Str. 7<br>69115 Heidelberg<br><br>Montag 09:00 - 13:00 Uhr<br>Dienstag 10:00 - 14:00 Uhr<br>Mittwoch 13:00 - 18:00 Uhr</p>
-			<p translate="no"><strong>Café Gegendruck</strong><br>Fischergasse 2<br>69117 Heidelberg<br><br>Sonntag 20:00 Uhr bei der KüFa (veganes Esen auf Spendenbasis)</p>
-			<p translate="no"><strong>Basement Bikes</strong><br>Werftstraße 29<br>68159 Mannheim<br><br>Zu den regulären Öffnungszeiten</p>
+			<p translate="no"><strong>Bürgerbüro Die Linke</strong><br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p><p>Montag 09:00 - 13:00 Uhr<br>Dienstag 10:00 - 14:00 Uhr<br>Mittwoch 13:00 - 18:00 Uhr</p>
+			<p translate="no"><strong>Café Gegendruck</strong><br>Fischergasse 2<br>69117 Heidelberg</p><p>Sonntag 20:00 Uhr bei der KüFa (veganes Esen auf Spendenbasis)</p>
+			<p translate="no"><strong>Basement Bikes</strong><br>Werftstraße 29<br>68159 Mannheim</p><p>Zu den regulären Öffnungszeiten</p>
 
 			<p>Je nach Verfügbarkeit gibt es meist Guscheine von <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> oder <span translate="no">DM</span> für 50€</p>
 		</div>
