--- a/www/de/index.html
+++ b/www/de/index.html
@@ -55,9 +55,19 @@
 
 			<p>Du bist solidarisch mit Menschen mit Bezahlkarte und magst bei unseren Aktionen mitmachen? Hol dir deinen Einkaufsgutschein bei einer unserer Ausgabestellen.</p>
 
-			<p translate="no"><strong>Bürgerbüro Die Linke</strong><br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p><p>Montag 09:00 - 13:00 Uhr<br>Dienstag 10:00 - 14:00 Uhr<br>Mittwoch 13:00 - 18:00 Uhr</p>
-			<p translate="no"><strong>Café Gegendruck</strong><br>Fischergasse 2<br>69117 Heidelberg</p><p>Sonntag 20:00 Uhr bei der KüFa (veganes Esen auf Spendenbasis)</p>
-			<p translate="no"><strong>Basement Bikes</strong><br>Werftstraße 29<br>68159 Mannheim</p><p>Zu den regulären Öffnungszeiten</p>
+			<h2>Wo gibt es Gutscheine?</h2>
+
+			<p translate="no"><strong>Café Leitstelle</strong><br>Emil-Maier-Str. 16<br>69115 Heidelberg</p><p>Montag bis Donnerstag 09:00 - 18:00 Uhr<br>Zusätzlich bei Events</p>
+
+			<p translate="no"><strong>Bürgerbüro Die Linke</strong><br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p><p>Montag 09:00 - 12:30 Uhr, 14:00 - 16:00<br>Dienstag 09:30 - 16:00 Uhr<br>Mittwoch 09:30 - 12:30 Uhr, 14:00 - 18:00 Uhr<br>Freitag 09:30 - 12:30</p>
+
+			<p translate="no"><strong>Basement Bikes</strong><br>Werftstraße 29<br>68159 Mannheim</p><p>Dienstag 10:00 - 13:00 Uhr, 14:00 - 18:00 Uhr<br>Donnerstag 16:00 - 20:00 Uhr</p>
+
+			<p translate="no"><strong>Café Gegendruck</strong><br>Fischergasse 2<br>69117 Heidelberg</p><p>Immer bei der KüFa (Küche für alle, veganes Essen gegen Spende), Sonntag 20:00 Uhr</p>
+
+			<p translate="no"><strong>Collegium Academicum</strong><br>Marie-Clauss-Str. 3<br>69126 Heidelberg</p><p>Immer bei der KüFa (Küche für alle, veganes Essen gegen Spende)<br>Am letzten Sonntag im Monat, 17:00 - 20:00 Uhr</p>
+
+			
 
 			<p>Je nach Verfügbarkeit gibt es meist Guscheine von <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> oder <span translate="no">DM</span> für 50€</p>
 		</div>
